2003-09-11  Ettore Perazzoli  <ettore@ximian.com>

	* e-storage-set-view.c (impl_right_click): If the
	right_click_row_path is not NULL (i.e. a menu is being popped up
	already), don't pop up the menu again.  [#48388]

2003-09-11  Ettore Perazzoli  <ettore@ximian.com>

	[#47875, thanks to Calvin Liu for figuring this out.]

	* e-shortcuts.c (e_shortcuts_add_default_shortcuts): Use the
	group_num arg, so it gets added to the proper group.
	(e_shortcuts_add_default_group): Pass the actual group number to
	e_shortcuts_add_default_shortcuts().

2003-09-11  Hans Petter Jansson  <hpj@ximian.com>

	* Makefile.am (evolution_LDADD): libical-evolution.la -> libical.la

2003-09-05  Yuedong Du  <yuedong.du@sun.com>

	* e-shell-importer.c: (importer_file_page_new),
	(importer_type_page_new), (show_import_wizard): Use 
	gtk_label_new_with_mnemonic() to replace gtk_label_new(). Use
	gtk_label_set_mnemonic_widget() to set up label<-> entry
	relationship. Change gtk_button_set_label() to 
	gtk_button_set_use_underline() and gtk_button_set_label(). Change 
	gtk_radio_button_new_with_label_from_widget() to 
	gtk_radio_button_new_with_mnemonic_from_widget(). fix bug #47867

2003-07-24  Yuedong Du  <yuedong.du@sun.com>

	* e-shell-offline-handler.c: (dialog_response_cb): fix crash when user escape the
	dialog. see bug #46700.

2003-07-23  Dan Winship  <danw@ximian.com>

	* Makefile.am: Use EVO_MARSHAL_RULE

	* e-shell-importer.c (prepare_intelligent_page): Fix a warning

2003-07-22  Antonio Xu  <antonio.xu@sun.com>

	* e-shell-startup-wizard.c (e_shell_startup_wizard_create): connect
	to "delete_event" signal with startup_wizard_delete. [#46284]

2003-07-22  Antonio Xu <antonio.xu@sun.com>

	* e-shell-importer.c: (show_import_wizard): use
	g_signal_connect_after to connect "prepare" signal.
	(prepare_intelligent_page): Display some error log and disable
	forward button rather than jump to finish page.  [#46017]

2003-07-15  Antonio Xu  <antonio.xu@sun.com>
	