@@ -1,3 +1,10 @@
+2003-09-12  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* e-config-upgrade.c: (utf8_reencode), (upgrade_xml_1_2_rec),
+	(e_config_upgrade):
+	Fix migration of shortcuts.xml which was incorrectly encoded by
+	libxml1. (Mdk bug #4927)
+
 2003-09-11  Ettore Perazzoli  <ettore@ximian.com>
 
 	* e-storage-set-view.c (impl_right_click): If the
